objects/Instance__c.object
<CustomObject>
    <description>Instance information for ESi customers</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Instances</relationshipLabel>
        <relationshipName>Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instance_Legacy_ID__c</fullName>
        <label>Instance Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>Only visible to Engineering Support, Client Services and Professional Services.</inlineHelpText>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Site__c</fullName>
        <label>Primary Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>Instance URL</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>URL__c</columns>
        <columns>User_Name__c</columns>
        <columns>Password__c</columns>
        <columns>Primary_Site__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Instances</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRED{00}</displayFormat>
        <label>Instance Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>